@@ -19,6 +19,10 @@ smdiag			Thomas Sailer HB9JNX <t.sailer@alumni.ethz.ch>
 smmixer			Thomas Sailer HB9JNX <t.sailer@alumni.ethz.ch>
 ttylinkd		Craig Small VK2XLZ <csmall@small.dropbear.id.au>
 dmascc_cfg		Klaus Kudielka	
+xfhdlcchpar		Thomas Sailer HB9JNX <t.sailer@alumni.ethz.ch>
+xfhdlcst		Thomas Sailer HB9JNX <t.sailer@alumni.ethz.ch>
+xfsmdiag		Thomas Sailer HB9JNX <t.sailer@alumni.ethz.ch>
+xfsmmixer		Thomas Sailer HB9JNX <t.sailer@alumni.ethz.ch>
 yamcfg			Jean-Paul Roubelat F6FBB <jpr@f6fbb.org>	
 
 All others		Jonathon Naylor G4KLX <g4klx@g4klx.demon.co.uk>
