@@ -137,7 +137,7 @@ valid mode flag letters are:
 .RS
 .TP 5
 .B D
-Do not allow connections that have passed via any digi-peaters. AX.25 only.
+Do not allow connections that have passed via any digipeaters. AX.25 only.
 .TP 5
 .B L
 Do not allow this station to connect, they are Locked out.
