@@ -44,7 +44,6 @@ application data, this is done via the NETROM_HDRINCL socket option.
 .BR netromd (8),
 .BR noderest (8),
 .BR nodesave (8),
-.BR nrctl (8),
 .BR nrparms (8).
 .LP
 .SH AUTHOR
