@@ -70,7 +70,6 @@ the same command is used but with the + replaced by a -.
 .BR nrports (5),
 .BR axparms (8),
 .BR netromd (8),
-.BR nrctl (8),
 .BR nrparms (8).
 .SH AUTHOR
 Jonathan Naylor G4KLX <g4klx@g4klx.demon.co.uk>
