@@ -37,7 +37,6 @@ ROSE_HDRINCL socket option.
 .BR setsockopt(2),
 .BR getsockopt(2),
 .BR rsports (5),
-.BR rsctl (8),
 .BR rsparms (8).
 .LP
 .SH AUTHOR
