@@ -58,7 +58,6 @@ Display the version information.
 .BR rose (4),
 .BR axports (5),
 .BR rsports (5),
-.BR rsctl (8),
 .BR rsparms (8).
 .SH AUTHOR
 Jonathan Naylor G4KLX <g4klx@g4klx.demon.co.uk>
